--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     startCommand: uv run -m ads_mcp.server
     envVars:
       - key: MCP_TRANSPORT
-        value: streamable-http
+        value: sse
       - key: MCP_HOST
         value: 0.0.0.0
       # Set these in Render dashboard as secrets:
@@ -14,4 +14,3 @@ services:
       #   OR
       # - GOOGLE_ADS_CREDENTIALS: Path to credentials file (if uploaded)
       #   Plus individual credential env vars if needed
-
